force-app/main/default/objects/CAM_Selection__c/CAM_Selection__c.object-meta.xml
<CustomObject>
    <description>Case#220 - CAM object that stores the user selection per CAM record

EN# Strategic client planning - phase 2 . Field label changed to Client Plan History , API name was not changed because of the impact on Client Overview functionality</description>
    <label>Client Plan Version</label>
    <nameField>
        <displayFormat>Client Plan-{0000}</displayFormat>
        <label>Client Plan</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Plan Versions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>