force-app/main/default/objects/CAM_Selection__c/fields/CAM_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>CAM_Review_Date__c</fullName>
    <description>Case#220 - Holds the next review date of this CAM report</description>
    <label>Review Date</label>
    <type>Date</type>
</CustomField>