force-app/main/default/objects/CAM_Selection__c/fields/Case_Selection__c.field-meta.xml
<CustomField>
    <fullName>Case_Selection__c</fullName>
    <description>Case#220 - Stores Id&apos;s of selected cases</description>
    <label>Case Selection</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>