force-app/main/default/objects/CAM_Selection__c/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case#220 - Lookup to Client (Account) object</description>
    <label>Client Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>CAM_Selection</relationshipName>
    <type>Lookup</type>
</CustomField>