force-app/main/default/objects/CAM_Selection__c/fields/Contact_Selection__c.field-meta.xml
<CustomField>
    <fullName>Contact_Selection__c</fullName>
    <description>Case#220 - Stores Id&apos;s of selected contacts</description>
    <label>Contact Selection</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>