force-app/main/default/objects/CAM_Selection__c/fields/Green_Product_Selection__c.field-meta.xml
<CustomField>
    <fullName>Green_Product_Selection__c</fullName>
    <description>Case#220 - Stores Id&apos;s of selected green products (Products included in the client portfolio)</description>
    <label>Green Product Selection</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>