force-app/main/default/objects/CAM_Selection__c/fields/Include_Non_User_Team__c.field-meta.xml
<CustomField>
    <fullName>Include_Non_User_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Case#220 - Flag to indicate that this report must include the Non-User client team when printing the PDF</description>
    <label>Include Non-User Team</label>
    <type>Checkbox</type>
</CustomField>