force-app/main/default/objects/CAM_Selection__c/fields/LastViewedTab__c.field-meta.xml
<CustomField>
    <fullName>LastViewedTab__c</fullName>
    <description>Enh#119 Client Overview: Stores the last viewed tab that the user selected.</description>
    <label>LastViewedTab</label>
    <length>255</length>
    <type>Text</type>
</CustomField>