force-app/main/default/objects/CAM_Selection__c/fields/Opportunity_Selection__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Selection__c</fullName>
    <description>Case#220 - Stores Id&apos;s of selected opportunities</description>
    <label>Opportunity Selection</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>