force-app/main/default/objects/CAM_Selection__c/fields/Red_Product_Selection__c.field-meta.xml
<CustomField>
    <fullName>Red_Product_Selection__c</fullName>
    <description>Case#220 - Stores Id&apos;s of selected red products (Products not in the client portfolio)</description>
    <label>Red Product Selection</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>