force-app/main/default/objects/CAM_Selection__c/fields/Review_Conducted_By__c.field-meta.xml
<CustomField>
    <fullName>Review_Conducted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case#220 - The person that reviewed this CAM report.</description>
    <label>Review Conducted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CAM_Selections</relationshipName>
    <type>Lookup</type>
</CustomField>