force-app/main/default/objects/CAM_Selection__c/fields/Task_Selection__c.field-meta.xml
<CustomField>
    <fullName>Task_Selection__c</fullName>
    <description>Case#220 - Stores Id&apos;s of selected tasks</description>
    <label>Task Selection</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>