force-app/main/default/objects/CAM_Selection__c/fields/Team_Selection__c.field-meta.xml
<CustomField>
    <fullName>Team_Selection__c</fullName>
    <description>Case#220 - Stores Id&apos;s of selected client team users</description>
    <label>Team Selection</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>