force-app/main/default/objects/CAM_Selection__c/fields/Yellow_Product_Selection__c.field-meta.xml
<CustomField>
    <fullName>Yellow_Product_Selection__c</fullName>
    <description>Case#220 - Stores Id&apos;s of selected yellow products (Products potentially in the client portfolio)</description>
    <label>Yellow Product Selection</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>